--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -6,8 +6,8 @@
     <shape android:shape="rectangle" >
         <gradient
             android:angle="-90"
-            android:startColor="#F2D9B5" android:endColor="#623100" />
-        <corners android:radius="20dp" />
+            android:startColor="@color/dark_orange" android:endColor="#D57C26" />
+        <corners android:radius="20px" />
     </shape>
 </item>
 <!-- create the stroke for top, left, bottom and right with the dp you want -->
@@ -18,8 +18,8 @@
     android:top="2dp">
     <shape android:shape="rectangle" >
         <!-- fill the inside in the color you want (could also be a gradient again if you want to, just change solid to gradient and enter angle, start, maybe center, and end color) -->
-        <gradient android:angle="-90" android:startColor="@color/dark_orange" android:endColor="#A05200" />
-        <corners android:radius="20dp" />
+        <gradient android:angle="-90" android:startColor="@color/dark_orange" android:endColor="#DC8229" />
+        <corners android:radius="20px" />
     </shape>
 </item>
 
