--- a/app/src/main/res/layout/user_selection_page.xml
+++ b/app/src/main/res/layout/user_selection_page.xml
@@ -20,7 +20,7 @@
         android:id="@+id/profile_example"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:contentDescription="@string/avatar_del_usuario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,9 +31,15 @@
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/comixloudcyrbychzshrft"
         android:text="Matias"
-        android:textColor="#FFFCFC"
+        android:textStyle="bold"
+        android:textColor="@color/light_font"
+        android:shadowColor="@color/text_shadow"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +64,15 @@
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
             android:background="@drawable/button_background"
+            android:fontFamily="@font/comixloudcyrbychzshrft"
+            android:textStyle="bold"
+            android:textColor="@color/light_font"
+            android:shadowColor="@color/text_shadow"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="3"
+            android:textSize="10sp"
             android:text="@string/pacientes"
-            android:textColor="@color/white"
             />
 
         <android.widget.Button
@@ -69,18 +82,24 @@
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
             android:background="@drawable/button_background"
+            android:fontFamily="@font/comixloudcyrbychzshrft"
+            android:textStyle="bold"
+            android:textColor="@color/light_font"
+            android:shadowColor="@color/text_shadow"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="3"
+            android:textSize="10sp"
             android:text="@string/terapeutas"
-            android:textColor="@color/white"
             />
 
     </LinearLayout>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="300dp"
         android:layout_height="250dp"
-        android:background="@color/light_blue"
+        android:background="@drawable/rounded_border"
         android:scrollbars="vertical"
         android:layout_marginTop="20dp"
         android:padding="8dp"
@@ -88,4 +107,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_list_users" />
+
+
+    <android.widget.Button
+        android:id="@+id/iniciar"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/comixloudcyrbychzshrft"
+        android:shadowColor="@color/text_shadow"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:text="@string/iniciar"
+        android:textColor="@color/light_font"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
