Agrego que se muestre segun el boton seleccionado los pacientes o terapeutas y mejoro el diseño de ciertos recursos. Ademas se realizaron modificaciones la estructura de la base de datos para que sea posible la presencia de distintos tipos de usuario.

--- a/app/src/main/res/layout/user_selection_page.xml
+++ b/app/src/main/res/layout/user_selection_page.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/cedica_logo_cut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/cedica_logo_cut"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,21 +18,21 @@
 
     <ImageView
         android:id="@+id/profile_example"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/avatar_del_usuario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cedica_logo_cut"
-        app:srcCompat="@drawable/profile_example" />
+        app:srcCompat="@drawable/first_avatar" />
 
     <TextView
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/comixloudcyrbychzshrft"
+        android:fontFamily="@font/comixloud"
         android:text="Matias"
         android:textStyle="bold"
         android:textColor="@color/light_font"
@@ -63,8 +63,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/comixloudcyrbychzshrft"
+            android:background="@drawable/button_selector"
+            android:fontFamily="@font/comixloud"
             android:textStyle="bold"
             android:textColor="@color/light_font"
             android:shadowColor="@color/text_shadow"
@@ -81,8 +81,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/comixloudcyrbychzshrft"
+            android:background="@drawable/button_selector"
+            android:fontFamily="@font/comixloud"
             android:textStyle="bold"
             android:textColor="@color/light_font"
             android:shadowColor="@color/text_shadow"
@@ -114,8 +114,8 @@
         android:layout_width="250dp"
         android:layout_height="70dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/button_background"
-        android:fontFamily="@font/comixloudcyrbychzshrft"
+        android:background="@drawable/button_selector"
+        android:fontFamily="@font/comixloud"
         android:shadowColor="@color/text_shadow"
         android:shadowDx="2"
         android:shadowDy="2"
