--- a/app/src/main/res/layout/begin_page.xml
+++ b/app/src/main/res/layout/begin_page.xml
@@ -1,12 +1,13 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/cedica_logo"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="88dp"
         android:src="@drawable/cedica_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -14,13 +15,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="460dp"
+        android:id="@+id/horse"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="70dp"
         android:src="@drawable/horse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cedica_logo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
