--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -8,12 +8,12 @@
     <!-- Avatar -->
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile_example" />
+        app:srcCompat="@drawable/first_avatar" />
 
     <!-- Nombre -->
     <TextView
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:fontFamily="@font/comixloudcyrbychzshrft"
+        android:fontFamily="@font/comixloud"
         android:textSize="5dp"
         android:text="User Name"
         app:layout_constraintEnd_toEndOf="parent"
