--- a/app/src/main/res/layout/user_selection_page.xml
+++ b/app/src/main/res/layout/user_selection_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -33,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/comixloud"
-        android:text="Matias"
+        android:text="@string/user"
         android:textStyle="bold"
         android:textColor="@color/light_font"
         android:shadowColor="@color/text_shadow"
@@ -62,7 +61,7 @@
             android:layout_width="150dp"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:layout_marginEnd="8dp"
+            android:layout_margin="4dp"
             android:background="@drawable/button_selector"
             android:fontFamily="@font/comixloud"
             android:textStyle="bold"
@@ -75,12 +74,14 @@
             android:text="@string/pacientes"
             />
 
+
         <android.widget.Button
             android:id="@+id/therapist"
             android:layout_width="150dp"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:layout_marginEnd="8dp"
+            android:layout_margin="4dp"
+            android:layout_marginEnd="0dp"
             android:background="@drawable/button_selector"
             android:fontFamily="@font/comixloud"
             android:textStyle="bold"
