1. Modifico los fragmentos y el main activity para hacer uso de viewBinding 2. Realizo avances importantes en el user_init_page para que se muestren los detalles del mismo de acuerdo al usuario seleccionado. Para ello fue necesario Safe Args (modificaciones en libs.versions.toml y build.gradle.kts de la app y en el top-level). 3. Agregue el campo de dificultad en el modelo de paciente (y cree el enum Difficulty).

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,11 +20,13 @@
         android:name="com.example.juegosdidacticos_limpiezadecaballo.ui.fragment.UserSelectionFragment"
         android:label="User Selection Page"
         tools:layout="@layout/user_selection_page" >
-
         <action
             android:id="@+id/action_userSelectionPage_to_userInitPage"
-            app:destination="@id/UserInitPage" />
-
+            app:destination="@id/UserInitPage">
+            <argument
+                android:name="selectedUser"
+                app:argType="com.example.juegosdidacticos_limpiezadecaballo.data.model.NamedEntity" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/UserInitPage"
