--- a/app/src/main/res/layout/user_init_page.xml
+++ b/app/src/main/res/layout/user_init_page.xml
@@ -38,13 +38,14 @@
         android:id="@+id/user_difficulty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/comixregular"
         android:shadowColor="@color/text_shadow"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"
         android:text="@string/difficulty"
+        android:visibility="gone"
         android:textColor="@color/light_font"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -54,29 +55,47 @@
 
     <LinearLayout
         android:id="@+id/button_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="120dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_difficulty">
+        app:layout_constraintTop_toBottomOf="@id/user_difficulty"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <android.widget.Button
+            android:id="@+id/pacients_button"
+            style="@style/ButtonStyleMenu"
+            android:visibility="gone"
+            android:text="@string/pacientes" />
 
         <android.widget.Button
             android:id="@+id/play_button"
             style="@style/ButtonStyleMenu"
+            android:visibility="gone"
             android:text="@string/jugar" />
-
-        <android.widget.Button
-            android:id="@+id/tutorial_button"
-            style="@style/ButtonStyleMenu"
-            android:text="@string/tutorial" />
 
         <android.widget.Button
             android:id="@+id/information_button"
             style="@style/ButtonStyleMenu"
+            android:visibility="gone"
             android:text="@string/informacion" />
+
+        <android.widget.Button
+            android:id="@+id/register_button"
+            style="@style/ButtonStyleMenu"
+            android:visibility="gone"
+            android:textSize="16sp"
+            android:text="@string/registrar_usuario" />
+
+        <android.widget.Button
+            android:id="@+id/configuration_button"
+            style="@style/ButtonStyleMenu"
+            android:visibility="gone"
+            android:text="@string/configuracion" />
 
         <android.widget.Button
             android:id="@+id/change_profile_button"
