--- a/app/src/main/res/layout/about_us.xml
+++ b/app/src/main/res/layout/about_us.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
@@ -28,7 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/infoTitle"
             app:layout_constraintVertical_bias="0.0"
-            app:tint="#E77A22" />
+            app:tint="#C65D18" />
 
         <TextView
             android:id="@+id/infoTitle"
@@ -36,7 +35,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/comixloud"
             android:text="@string/about_us_developer"
-            android:textColor="#E77A22"
+            android:textColor="#C65D18 "
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@id/closeDialogButton"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,12 +50,10 @@
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/comixregular"
             android:text="@string/about_us_team"
-            android:textColor="@color/dark_orange"
+            android:textColor="#D89A34 "
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/infoTitle"
-
-            />
+            app:layout_constraintTop_toBottomOf="@+id/infoTitle" />
 
         <TextView
             android:id="@+id/infoTitle2"
@@ -65,7 +62,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/comixloud"
             android:text="@string/about_us_colaboration"
-            android:textColor="#E77A22"
+            android:textColor="#C65D18 "
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/infoContent" />
