--- a/app/src/main/res/layout/background_game.xml
+++ b/app/src/main/res/layout/background_game.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipChildren="false"
-    android:background="@drawable/background_game">
+    android:background="@drawable/background_game"
+    android:clipChildren="false">
 
-    <!-- Barra superior -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_menu"
-        android:layout_width="889dp"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@drawable/top_menu_background"
-        android:padding="8dp"
-        android:clipToPadding="false"
         android:clipChildren="false"
+        android:clipToPadding="false"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,158 +22,124 @@
             android:id="@+id/button_group_game"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
-            android:layout_marginTop="23dp"
             android:layout_marginStart="15dp"
-
+            android:layout_marginTop="25dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/btn_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/button_selector"
                 android:contentDescription="Volver al menú"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="5dp"
                 android:src="@drawable/ic_home"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
 
-            <!-- Botón configuración -->
             <ImageButton
                 android:id="@+id/btn_settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
                 android:background="@drawable/button_selector"
                 android:contentDescription="Abrir configuración"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="5dp"
                 android:src="@drawable/ic_settings"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
 
-            <!-- Botón pausa -->
             <ImageButton
                 android:id="@+id/btn_pause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
                 android:background="@drawable/button_selector"
                 android:contentDescription="Pausar el juego"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="5dp"
                 android:src="@drawable/ic_pause"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
         </LinearLayout>
 
-        <!-- Tiempo -->
-        <!-- Barra de progreso y dificultad -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tv_score"
-            app:layout_constraintStart_toEndOf="@id/button_group_game"
-            app:layout_constraintTop_toTopOf="parent"
             android:clipChildren="false"
-            >
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!-- LinearLayout en lugar de ConstraintLayout para el primer contenedor -->
             <LinearLayout
                 android:id="@+id/time_constraint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:orientation="vertical"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/progress_bar_constraint"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/time_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/comixloud"
                     android:text="Tiempo"
-                    android:textSize="12dp"
-                    android:layout_marginTop="-8dp"
-                    android:textColor="@color/dark_orange"/>
+                    android:textColor="@color/dark_orange"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/total_time"
-                    android:layout_width="43dp"
-                    android:layout_height="46dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:background="@drawable/button_background"
                     android:fontFamily="@font/comixregular"
                     android:gravity="center"
-                    android:padding="5dp"
-                    android:text="00"
-                    android:layout_marginTop="4dp"
+                    android:text="00:00"
                     android:textColor="@android:color/white"
-                    android:textSize="32dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    />
+                    android:textSize="20dp" />
             </LinearLayout>
 
-            <!-- LinearLayout en lugar de ConstraintLayout para el segundo contenedor -->
             <LinearLayout
                 android:id="@+id/progress_bar_constraint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:orientation="vertical"
-                app:layout_constraintStart_toEndOf="@+id/time_constraint"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/error_constraint">
+                app:layout_constraintEnd_toStartOf="@+id/error_constraint"
+                app:layout_constraintStart_toEndOf="@+id/time_constraint"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tv_difficulty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="Facil"
-                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/comixloud"
-                    android:textSize="12dp"
-                    android:layout_marginTop="-8dp"
+                    android:text="Facil"
                     android:textColor="@color/dark_orange"
-
-                    />
+                    android:textSize="12dp" />
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
                     style="@android:style/Widget.ProgressBar.Horizontal"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:progressTint="@color/dark_orange"
                     android:max="100"
-                    android:progress="50"
-                    android:progressDrawable="@drawable/progress_bar_style" />
+                    android:progress="50" />
             </LinearLayout>
 
-            <!-- LinearLayout en lugar de ConstraintLayout para el tercer contenedor -->
             <LinearLayout
                 android:id="@+id/error_constraint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:orientation="vertical"
-                app:layout_constraintStart_toEndOf="@+id/progress_bar_constraint"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar_constraint"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/error_text"
@@ -183,56 +147,90 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/comixloud"
                     android:text="Errores"
-                    android:textSize="12dp"
-                    android:layout_marginTop="-8dp"
-                    android:textColor="@color/dark_orange"/>
+                    android:textColor="@color/dark_orange"
+                    android:textSize="12dp" />
 
                 <TextView
                     android:id="@+id/error_value"
-                    android:layout_width="43dp"
-                    android:layout_height="46dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:background="@drawable/button_background"
                     android:fontFamily="@font/comixregular"
                     android:gravity="center"
-                    android:padding="5dp"
                     android:text="6/8"
-                    android:layout_marginTop="4dp"
                     android:textColor="@android:color/white"
-                    android:textSize="24dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"/>
+                    android:textSize="20dp" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-        <!-- Puntaje total -->
-        <TextView
-            android:id="@+id/tv_score"
+        <LinearLayout
+            android:id="@+id/score_constraint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Puntaje: 0"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:layout_margin="8dp"
+            android:orientation="vertical"
+            app:layout_constraintHorizontal_bias="0.92"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="15dp" />
+            app:layout_constraintStart_toEndOf="@+id/layout_progress"
+            app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/comixloud"
+                android:text="Puntaje"
+                android:textColor="@color/dark_orange"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/score_value"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/comixregular"
+                android:gravity="center"
+                android:text="10"
+                android:textColor="@android:color/white"
+                android:textSize="24dp" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Botón de pista (abajo a la izquierda) -->
     <ImageButton
         android:id="@+id/btn_hint"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="16dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/button_background"
         android:contentDescription="Pista"
-        android:src="@drawable/ic_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/horse_image"
+        android:layout_width="300dp"
+        android:layout_height="320dp"
+        android:contentDescription="Imagen de un caballo"
+        android:src="@drawable/horse_game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.99" />
+
+    <ImageView
+        android:id="@+id/table_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Imagen de una mesa"
+        android:src="@drawable/game_table"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/horse_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
