--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -4,26 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_game"
-    android:clipChildren="false">
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_menu"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="@drawable/top_menu_background"
+        android:layout_height="75dp"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/top_menu_background"
+            >
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
             android:id="@+id/button_group_game"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="25dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -96,7 +107,7 @@
                     android:gravity="center"
                     android:text="00:00"
                     android:textColor="@android:color/white"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <LinearLayout
